# smart_compass

./: README.md  UserFlowLibrary.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: copilot-instructions.md
ESP32-S3_Feather/: Adafruit ESP32-S3 8MB No PSRAM-eagle-import.kicad_sym  Adafruit ESP32-S3 8MB No PSRAM.kicad_prl  Adafruit ESP32-S3 8MB No PSRAM.kicad_pro  Adafruit ESP32-S3 8MB No PSRAM.kicad_sch  sym-lib-table
Medallion_Board/: Medallion_Board.csv  Medallion_Board.kicad_pcb  Medallion_Board.kicad_prl  Medallion_Board.kicad_pro  Medallion_Board.kicad_sch  block_diagram.md  board_components.md  communications.kicad_sch  power.kicad_sch  rgb_led_display.kicad_sch  user_io.kicad_sch
SmartCompass/: .gitignore  DRC.rpt  SmartCompass.kicad_prl  SmartCompass.kicad_pro  SmartCompass.kicad_sch  arrange_ws2812_circle.py  board_components.md  communications.kicad_sch  power.kicad_sch  user_io.kicad_sch
smart_compass_rs/: Cargo.toml  README.md
